[server] minor change
